# mousewallet

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: lib.c  lib.h  main.c  tests.c
